fix overflow when x or o added to box

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ footer{
     height: 200px;
     border: 1px solid black;
     display: inline-block;
+    overflow: hidden;
 
 }
 
